# laladog

./: .dockerignore  .env.production  .gitignore  CLAUDE.md  Dockerfile  Jenkinsfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
.claude/: launch.json
.github/workflows/: release.yml
backend/: main.py  requirements.txt
backend/core/: config.py  database.py  security.py  ws_manager.py
backend/migrations/: 001_create_shared_environments.sql
backend/models/: team.py  user.py
backend/routers/: auth.py  sync.py  teams.py  ws.py
docs/: tech-article.md  tech-summary.md  user-guide.md
docs/sa/: collection-management.md  console.md  dark-mode.md  environment-variables.md  google-oauth.md  http-request.md  postman-import.md  request-history.md  team-collaboration.md  websocket-testing.md  workspace.md
src/: vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: api.rs  http.rs  mod.rs  oauth.rs  websocket.rs
src-tauri/src/db/: mod.rs
src/constants/: changelog.ts
src/stores/: authStore.ts  collectionStore.ts  consoleStore.ts  environmentStore.ts  historyStore.ts  requestStore.ts  syncStore.ts  tabStore.ts  teamStore.ts  themeStore.ts  workspaceStore.ts
src/types/: collection.ts  console.ts  environment.ts  history.ts  index.ts  request.ts  response.ts  tab.ts  workspace.ts
src/utils/: api.ts  curlGenerator.ts  httpSender.ts  monacoSetup.ts  openapiImporter.ts  postmanExporter.ts  (+4 more)
(+60 files in other folders)
