[package]
name = "laladog"
version = "0.5.0"
description = "LalaDog - API Client for Teams"
authors = ["you"]
edition = "2021"

[lib]
name = "laladog_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart", "blocking"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
tiny_http = "0.12"
url = "2"
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
urlencoding = "2"

